# breeze

./: CMakeLists.txt  README.md
src/: AlignedDataBlob.cpp  AlignedDataBlob.h  Blob.cpp  Blob.h  CPUTensor.cpp  CPUTensor.h  CPUTensorOps.cpp  CPUTensorOps.h  ScalarType.h  Tensor.h  TensorIterator.cpp  TensorIterator.h  TensorIteratorConfig.cpp  TensorIteratorConfig.h  TensorOps.h  TensorStorage.h  loss_functions.h  main.cpp  node.cpp  node.h
src/common/: Const.h  Macro.h  Utils.h
src/platform/: AVX2Ops.cpp  AVX2Ops.h  NEONOps.cpp  NEONOps.h  SIMDFactory.h  SIMDOps.h  Vectorized.cpp  VectorizedAvx2.h  VectorizedNeon.h
src/tests/: math_tests.h  performance_test.h  reduce_test.h  reduce_tests.h  test.txt  test_cases.h
